--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -93,7 +93,7 @@ stages:
         sshEndpoint: 'ssh-docker-host'
         runOptions: 'commands'
         commands: |
-          mkdir -p "$(REMOTE_DIR)/target"
+          mkdir -p "$(REMOTE_DIR)"
 
     # Copy Dockerfile
     - task: CopyFilesOverSSH@0
@@ -111,7 +111,7 @@ stages:
         sshEndpoint: 'ssh-docker-host'
         sourceFolder: '$(Pipeline.Workspace)/war'
         contents: '**/*.war'
-        targetFolder: '$(REMOTE_DIR)/target'
+        targetFolder: '$(REMOTE_DIR)'
 
     # Rename + docker build
     - task: SSH@0
@@ -125,7 +125,7 @@ stages:
           ls -l "$(REMOTE_DIR)"
           ls -l "$(REMOTE_DIR)/target"
 
-          WAR_FILE=$(find "$(REMOTE_DIR)/target" -maxdepth 1 -type f -name '*.war' -print -quit)
+          WAR_FILE=$(find "$(REMOTE_DIR)" -maxdepth 1 -type f -name '*.war' -print -quit)
           if [ -z "$WAR_FILE" ]; then
             echo "WAR not found!"
             exit 1
