--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -123,7 +123,7 @@ stages:
         
                 
 
-          cd "$(REMOTE_DIR)"
+          cd "$(REMOTE_DIR)" &&
           docker build -t "$(IMAGE):$(TAG)" -f Dockerfile .
 
           echo "Docker images:"
