Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,7 +70,7 @@ stages:
 - stage: RemoteBuild
   displayName: 'Remote Docker Build'
   dependsOn: BuildAndTest
-  condition: always()
+  condition: succeededOrFailed()
   jobs:
   - job: RemoteDockerBuild
     steps:
