Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -152,7 +152,7 @@ stages:
 # ---------------------------------------------------------------------------
 - stage: Deploy
   dependsOn: RemotePush
-  
+  condition: succeededOrFailed()
   jobs:
   - job: RemoteDeploy
     steps:
