--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -143,9 +143,11 @@ stages:
         sshEndpoint: 'ssh-docker-host'
         runOptions: 'commands'
         commands: |
-          echo "$(dockerhub.password)" | docker login -u "$(dockerhub.user)" --password-stdin
-          docker push "$(IMAGE):$(TAG)"
-          docker logout || true
+          
+            echo "$(dockerhub.password)" | docker login -u "$(dockerhub.user)" --password-stdin 2> >(grep -v 'stored unencrypted' >&2)
+            docker push "$(IMAGE):$(TAG)"
+            docker logout || true
+
 
 # ---------------------------------------------------------------------------
 # 4) DEPLOY
